# py.hsbi-timetable

./: .gitignore  .python-version  pyproject.toml  readme.md  ruff.toml
pip install -e ./: pip install -e .txt
src/timetable_scraper/: main.py
src/timetable_scraper/libs/: camelot_raw_pdf_data.py  camelot_raw_pdf_to_df.py  download_timetables.py  get_timetable_ver.py  helper_functions.py  log_config.py  openai_parser.py  openai_parser_df.py  process_raw_data-threaded.py  process_raw_data.py  tempCodeRunnerFile.py  update_timetable_google_api.py
